# pHeart

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties
app/: build.gradle.kts  detekt.yml
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/de/unia/digitalhealth/: DisplayActivity.kt  MainActivity.kt
app/src/main/kotlin/edu/uaux/pheart/: ApplicationModule.kt  DisplayActivity.kt  MainActivity.kt  PHeartApplication.kt
app/src/main/kotlin/edu/uaux/pheart/all_results/: AllResultsFragment.kt  AllResultsViewModel.kt  Measurement.kt  MeasurementAdapter.kt  MeasurementDummyRepository.kt
app/src/main/kotlin/edu/uaux/pheart/database/: ActivityLevel.kt  AppDatabase.kt  DaoExts.kt  Measurement.kt  MeasurementDao.kt  ZonedDateTimeConverter.kt
app/src/main/res/drawable/: ic_chevron_left_24.xml  ic_chevron_right_24.xml  ic_launcher_foreground.xml  ic_list_24.xml  ic_person_24.xml
app/src/main/res/layout/: activity_display.xml  activity_main.xml  activity_measure.xml  activity_measure_results.xml  display_bpm.xml  display_bpm_small.xml  dropdown_menu_item.xml  fragment_all_results.xml  fragment_measure_settings.xml  fragment_preferences.xml  fragment_profile.xml  fragment_statistics.xml  measurement_item.xml
app/src/main/res/menu/: navigation_menu.xml
app/src/main/res/values/: attrs.xml  attrs_heart_range_view.xml  bools.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-night/: bools.xml  styles.xml
app/src/main/res/values-w600dp/: dimens.xml
gradle/: libs.versions.toml
prototype/: main.py  pyproject.toml
(+42 files in other folders)
