[tool.poetry]
name = "heartbeat"
version = "0.1.0"
description = ""
authors = ["timm0e"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

